--- a/infra/concourse/Makefile
+++ b/infra/concourse/Makefile
@@ -1,16 +1,17 @@
 FLY_CMD := "fly"
-
-PIPELINES = \
-	container-vm \
-	kubernetes-engine \
-	network \
-	project-factory
+PIPELINE_CONFS := $(wildcard ./pipelines/*.yml)
+PIPELINES := $(foreach CONF, $(PIPELINE_CONFS), $(subst terraform-google-,,$(basename $(notdir $(CONF)))))
 
 .PHONY: $(PIPELINES)
 $(PIPELINES):
 	$(FLY_CMD) -t cft set-pipeline \
 		-p terraform-google-$@ \
 		-c pipelines/terraform-google-$@.yml \
+		-l vars/phoogle.yml
+
+check-%:
+	$(FLY_CMD) -t cft validate-pipeline -s \
+		-c pipelines/terraform-google-$*.yml \
 		-l vars/phoogle.yml
 
 POSTGRES_IP := 10.45.0.3
