--- a/infra/concourse/vars/phoogle.yml
+++ b/infra/concourse/vars/phoogle.yml
@@ -3,5 +3,5 @@ phoogle:
   billing_account_id: 01E8A0-35F760-5CF02A
   domain: phoogle.net
   folder_id: 853002531658
-  group_name: cloud-foundation-devs
+  group_name: pf-ci-test-fixture
   org_id: 826592752744
