--- a/infra/concourse/pipelines/terraform-google-cloud-nat.yml
+++ b/infra/concourse/pipelines/terraform-google-cloud-nat.yml
@@ -52,6 +52,7 @@ jobs:
       inputs:
       - name: pull-request
         path: terraform-google-cloud-nat
+      - name: lint-test-image
       run:
         path: make
         args: ['-s']
@@ -101,6 +102,7 @@ jobs:
       inputs:
       - name: pull-request
         path: terraform-google-cloud-nat
+      - name: integration-test-image
       run:
         path: sh
         args:
