--- a/infra/concourse/pipelines/terraform-google-project-factory.yml
+++ b/infra/concourse/pipelines/terraform-google-project-factory.yml
@@ -32,7 +32,7 @@ resources:
   type: docker-image
   source:
     repository: gcr.io/cloud-foundation-cicd/cft/kitchen-terraform
-    tag: 0.11.11_235.0.0_1.19.1_0.1.10
+    tag: 1.0.1
     username: _json_key
     password: ((sa.google))
 
