Fixed Managed DNS issue: added same value for element reference and managed_zone resource added fegexp validation for zoneName property changed integration test input parameteres to reproduce issue issue link: https://github.com/GoogleCloudPlatform/deploymentmanager-samples/issues/375

--- a/dm/templates/dns_managed_zone/tests/integration/dns_managed_zone.yaml
+++ b/dm/templates/dns_managed_zone/tests/integration/dns_managed_zone.yaml
@@ -6,7 +6,7 @@ imports:
     name: dns_managed_zone.py
 
 resources:
-  - name: ${CLOUDDNS_ZONE_NAME}
+  - name: ${CLOUDDNS_ZONE_NAME}-resource
     type: dns_managed_zone.py
     properties:
       zoneName: ${CLOUDDNS_ZONE_NAME}
