enh 434: instance template should support multiple NICs

--- a/dm/templates/instance/examples/instance.yaml
+++ b/dm/templates/instance/examples/instance.yaml
@@ -14,7 +14,8 @@ resources:
       diskImage: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
       machineType: f1-micro
       diskType: pd-ssd
-      network: default
+      networks:
+        - name: default
       metadata:
         items:
           - key: startup-script
