--- a/dm/templates/instance/tests/integration/instance.yaml
+++ b/dm/templates/instance/tests/integration/instance.yaml
@@ -17,8 +17,9 @@ resources:
       machineType: f1-micro
       diskType: pd-ssd
       canIpForward: true
-      network: test-network-${RAND}
-      subnetwork: regions/us-central1/subnetworks/test-subnet-${RAND}
+      networks:
+        - name: test-network-${RAND}
+          subnetwork: regions/us-central1/subnetworks/test-subnet-${RAND}
       metadata:
         items:
           - key: startup-script
