--- a/dm/templates/instance_template/examples/instance_template.yaml
+++ b/dm/templates/instance_template/examples/instance_template.yaml
@@ -11,7 +11,8 @@ resources:
     type: instance_template.py
     properties:
       diskImage: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
-      network: default
+      networks:
+        - default
       machineType: f1-micro
       tags:
         items:
