--- a/dm/tox.ini
+++ b/dm/tox.ini
@@ -11,7 +11,7 @@ whitelist_externals =
     make
     /bin/bash
 commands =
-    {toxinidir}/tests/run-unit
+    {toxinidir}/tests/run-tests {posargs}
 
 [testenv:venv]
 envdir = venv
