--- a/dm/templates/instance_template/tests/integration/instance_template_networks.yaml
+++ b/dm/templates/instance_template/tests/integration/instance_template_networks.yaml
@@ -15,7 +15,11 @@ resources:
       name: it-${RAND}
       instanceDescription: Instance description
       templateDescription: Template description
-      network: $(ref.test-network-${RAND}.selfLink)
+      networks:
+        - name: $(ref.test-network-0-${RAND}.selfLink)
+          subnetwork: $(ref.test-subnetwork-0-${RAND}.selfLink)
+        - name: $(ref.test-network-1-${RAND}.selfLink)
+          subnetwork: $(ref.test-subnetwork-1-${RAND}.selfLink)
       diskImage: ${IMAGE}
       machineType: f1-micro
       canIpForward: true
@@ -31,7 +35,23 @@ resources:
             value: unitTest
       labels:
         name: wrench
-  - name: test-network-${RAND}
+  - name: test-network-0-${RAND}
     type: compute.v1.network
     properties:
-      autoCreateSubnetworks: true
+      autoCreateSubnetworks: false
+  - name: test-network-1-${RAND}
+    type: compute.v1.network
+    properties:
+      autoCreateSubnetworks: false
+  - name: test-subnetwork-0-${RAND}
+    type: compute.v1.subnetwork
+    properties:
+      network: $(ref.test-network-0-${RAND}.selfLink)
+      ipCidrRange: 10.0.1.0/24
+      region: us-central1
+  - name: test-subnetwork-1-${RAND}
+    type: compute.v1.subnetwork
+    properties:
+      network: $(ref.test-network-1-${RAND}.selfLink)
+      ipCidrRange: 10.0.2.0/24
+      region: us-central1
