Follow-up for https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/pull/31
Fixes DM#434 for managed_instance_group
https://github.com/GoogleCloudPlatform/deploymentmanager-samples/issues/434

--- a/dm/templates/managed_instance_group/examples/managed_instance_group.yaml
+++ b/dm/templates/managed_instance_group/examples/managed_instance_group.yaml
@@ -18,5 +18,6 @@ resources:
       targetSize: 3
       instanceTemplate:
         diskImage: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
-        network: default
+        networks:
+          - name: default
         machineType: f1-micro
