[dm] [cli] debug create command

--- a/cli/testdata/cross-ref/main.yaml
+++ b/cli/testdata/cross-ref/main.yaml
@@ -1,17 +1,11 @@
 name: my-networks-main
 description: my-networks-dependent
-project: gl-akopachevskyy-dm-seed
 
 imports:
 - path: templates/network/network.py
 
 resources:
 - type: templates/network/network.py
-  name: my-network-A
-  properties:
-    autoCreateSubnetworks: false
-
-- type: templates/network/network.py
-  name: my-network-B
+  name: my-network
   properties:
     autoCreateSubnetworks: false
