Correct username for @ocsig

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 # Main team administering overall repo
-*           @morgante @aaron-lane @ocsi
+*           @morgante @aaron-lane @ocsig
 
 # Deployment Manager Reviewers
-/dm/        @morgante @ocsi @sjvanrossum
+/dm/        @morgante @ocsig @sjvanrossum
