Fixes #68: DM/instance_template: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/68
- Added version, links to docs
- Switched to using type provider
- Added cross-project creation support
- Added additionalProperties: false for nested objects
- Added support for "networkInterfaces[].accessConfigs[]", "disks",
"scheduling", "minCpuPlatform", "guestAccelerators",
"shieldedInstanceConfig", "sourceInstance", "sourceInstanceParams"
- Fixed resource name

--- a/dm/templates/instance_template/examples/instance_template.yaml
+++ b/dm/templates/instance_template/examples/instance_template.yaml
@@ -12,7 +12,9 @@ resources:
     properties:
       diskImage: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
       networks:
-        - default
+        - network: default
+          accessConfigs:
+            - type: ONE_TO_ONE_NAT
       machineType: f1-micro
       tags:
         items:
