--- a/dm/templates/instance_template/tests/integration/instance_template_networks.yaml
+++ b/dm/templates/instance_template/tests/integration/instance_template_networks.yaml
@@ -16,10 +16,14 @@ resources:
       instanceDescription: Instance description
       templateDescription: Template description
       networks:
-        - name: $(ref.test-network-0-${RAND}.selfLink)
+        - network: $(ref.test-network-0-${RAND}.selfLink)
           subnetwork: $(ref.test-subnetwork-0-${RAND}.selfLink)
-        - name: $(ref.test-network-1-${RAND}.selfLink)
+          accessConfigs:
+            - type: ONE_TO_ONE_NAT
+        - network: $(ref.test-network-1-${RAND}.selfLink)
           subnetwork: $(ref.test-subnetwork-1-${RAND}.selfLink)
+          accessConfigs:
+            - type: ONE_TO_ONE_NAT
       diskImage: ${IMAGE}
       machineType: f1-micro
       canIpForward: true
