Fixes #69: DM/managed_instance_group: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/69
- Added version, links to docs
- Switched to using type provider
- Added cross-project creation support
- Added additionalProperties: false for nested objects
- Fixed resource name

--- a/dm/templates/managed_instance_group/examples/managed_instance_group.yaml
+++ b/dm/templates/managed_instance_group/examples/managed_instance_group.yaml
@@ -19,5 +19,7 @@ resources:
       instanceTemplate:
         diskImage: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
         networks:
-          - name: default
+          - network: default
+            accessConfigs:
+              - type: ONE_TO_ONE_NAT
         machineType: f1-micro
