--- a/infra/concourse/pipelines/terraform-google-container-vm.yml
+++ b/infra/concourse/pipelines/terraform-google-container-vm.yml
@@ -24,7 +24,7 @@ resources:
   type: docker-image
   source:
     repository: gcr.io/cloud-foundation-cicd/cft/kitchen-terraform
-    tag: 0.11.10_216.0.0_1.19.1_0.1.10
+    tag: 2.0.0
     username: _json_key
     password: ((sa.google))
 
