--- a/infra/concourse/pipelines/terraform-google-log-export.yml
+++ b/infra/concourse/pipelines/terraform-google-log-export.yml
@@ -18,6 +18,7 @@ resources:
   type: docker-image
   source:
     repository: gcr.io/cloud-foundation-cicd/cft/lint
+    tag: 1.0.0
     username: _json_key
     password: ((sa.google))
 
@@ -108,7 +109,7 @@ jobs:
         PARENT_RESOURCE_FOLDER: ((log-export.phoogle_folder_id))
         PARENT_RESOURCE_ORGANIZATION: ((phoogle.org_id))
         PARENT_RESOURCE_BILLING_ACCOUNT: ((phoogle.billing_account_id))
- 
+
         SERVICE_ACCOUNT_JSON: ((log-export.phoogle_sa))
   on_success:
     put: notify-integration-test-success
