[dm][cli] Spring 15 and 16 stories
    - Add flag to print dependency graph
    - Implement Delete action
    - Implement Apply action
    - Implement Update action
    - Add output formatting for deployment creating Stages same way existing CLI does
    - Cross-deployment references for complex yaml (not just plain string)
    - Implement advanced options to pass config yamls (strings, directory, pattern)
    - Implement default project id setup according to configuration rules
    - Implement preview mode for update/apply action
    - Set deployment name from file name in case it missing on config yaml
    - Added integration testing
    - Removed commented unused test case

--- a/cli/testdata/deployment/describe-manifest.yaml
+++ b/cli/testdata/deployment/describe-manifest.yaml
@@ -27,7 +27,9 @@ layout: |
       value: $(ref.my-network-prod.selfLink)
     - finalValue: {}
       name: subnetworks
-      value: {}
+      value:
+        - name: subnet1
+        - name: subnet2
     properties:
       autoCreateSubnetworks: true
     resources:
