Fixes #103: DM/backend_service: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/103
- Added version, links to docs
- Switched to using type provider
- Added support for cross-project resource creation
- Added new fields: "backends[].maxRatePerEndpoint,
.maxConnectionsPerEndpoint", "iap", "customRequestHeaders[]"
- Changed healthCheck to healthChecks[]
- Added checks for INTERNAL/EXTERNAL LB schemes for all relevant fields
- Added checks for backends[].balancingMode

--- a/dm/templates/backend_service/examples/backend_service_global.yaml
+++ b/dm/templates/backend_service/examples/backend_service_global.yaml
@@ -20,4 +20,5 @@ resources:
         - group: <FIXME:instanceGroup>
           balancingMode: RATE
           maxRate: 10000
-      healthCheck: <FIXME:healthcheck>
+      healthChecks:
+        - <FIXME:healthcheck>
