--- a/dm/templates/backend_service/examples/backend_service_regional.yaml
+++ b/dm/templates/backend_service/examples/backend_service_regional.yaml
@@ -21,4 +21,5 @@ resources:
       loadBalancingScheme: INTERNAL
       backends:
         - group: <FIXME:instanceGroup>
-      healthCheck: <FIXME:healthcheck>
+      healthChecks:
+        - <FIXME:healthcheck>
