Fixes #105: DM/bigquery: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/105
- Added version, links to docs
- Switched to using type provider
- Added support for cross-project resource creation
- Added missing fields to datasets: "friendlyName",
"defaultPartitionExpirationMs", "labels", "access"
- Added missing fields to tables: "description", "labels", "clustering",
"requirePartitionFilter", "externalDataConfiguration",
"encryptionConfiguration"
- Fixed resource names
- Added uniqueItems: true and additionalProperties: false

--- a/dm/templates/bigquery/tests/integration/bigquery.yaml
+++ b/dm/templates/bigquery/tests/integration/bigquery.yaml
@@ -28,6 +28,8 @@ resources:
     properties:
       name: test_bq_table_${RAND}
       datasetId: $(ref.test-bq-dataset-${RAND}.datasetId)
+      dependsOn:
+        - test-bq-dataset-${RAND}
       schema:
         - name: firstname
           type: STRING
