--- a/dm/templates/gke/tests/integration/gke.yaml
+++ b/dm/templates/gke/tests/integration/gke.yaml
@@ -16,15 +16,17 @@ resources:
         network: ${NETWORK_NAME}
         subnetwork: ${SUBNET_NAME}
         initialClusterVersion: ${CLUSTER_VERSION}
-        initialNodeCount: ${NODE_COUNT}
-        nodeConfig:
-          machineType: ${MACHINE_TYPE}
-          oauthScopes:
-            - https://www.googleapis.com/auth/compute
-            - https://www.googleapis.com/auth/devstorage.read_only
-            - https://www.googleapis.com/auth/logging.write
-            - https://www.googleapis.com/auth/monitoring
-          localSsdCount: ${LOCALSSD_COUNT}
+        nodePools:
+          - name: default
+            initialNodeCount: ${NODE_COUNT}
+            config:
+              machineType: ${MACHINE_TYPE}
+              oauthScopes:
+                - https://www.googleapis.com/auth/compute
+                - https://www.googleapis.com/auth/devstorage.read_only
+                - https://www.googleapis.com/auth/logging.write
+                - https://www.googleapis.com/auth/monitoring
+              localSsdCount: ${LOCALSSD_COUNT}
         locations:
           - us-east1-b
           - us-east1-d
