Fixes #119: DM/route: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/119
- Added version, links to docs
- Switched to using type provider
- Added support for cross-project resource creation
- Fixed resource names
- Fixed arrays, objects and required fields (check for routeType + make
old scheme optional)
- Added missing fields: "description", "nextHopInstance",
"nextHopInstance", "nextHopNetwork", "nextHopGateway",
"nextHopVpnTunnel"

--- a/dm/templates/route/tests/integration/route.yaml
+++ b/dm/templates/route/tests/integration/route.yaml
@@ -15,7 +15,6 @@ resources:
       network: network-${RAND}
       routes:
       - name: ip-route-${RAND}
-        routeType: ipaddress
         nextHopIp: 10.118.8.12
         priority: 20000
         destRange: 0.0.0.0/0
@@ -42,3 +41,7 @@ resources:
         destRange: 0.0.0.0/0
         tags:
           - my-vpntunnelroute-tag
+      - nextHopIp: 10.118.8.13
+        destRange: 0.0.0.0/0
+        tags:
+          - my-iproute-tag
