--- a/infra/concourse/pipelines/terraform-google-kubernetes-engine.yml
+++ b/infra/concourse/pipelines/terraform-google-kubernetes-engine.yml
@@ -206,6 +206,12 @@ jobs:
       params:
         <<: *run-tests-params
 
+    - task: run-tests-database-encryption
+      image: integration-test-image
+      file: pull-request/test/ci/database-encryption.yml
+      params:
+        <<: *run-tests-params
+
   on_success:
     put: notify-integration-test-success
     resource: pull-request
