Fixes #118: DM/pubsub: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/118
- Added version, links to docs
- Switched to using type provider
- Added support for cross-project resource creation
- Fixed resource names
- Added topic fields: "labels"
- Added subscription fields: "pushConfig", "retainAckedMessages",
"messageRetentionDuration", "labels", "expirationPolicy"

--- a/dm/templates/pubsub/examples/pubsub.yaml
+++ b/dm/templates/pubsub/examples/pubsub.yaml
@@ -11,7 +11,7 @@ resources:
   - name: test-pubsub
     type: pubsub.py
     properties:
-      topic: test-topic
+      name: test-topic
       accessControl:
         - role: roles/pubsub.subscriber
           members:
