Fixes #154: DM/target_proxy: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/154
- Added version, links to docs
- Switched to using type provider
- Added support for cross-project resource creation
- Fixed resource names
- Upgraded compute api version
- Fixed fields descriptions, add checks to arrays and objects
- Added support for "sslCertificates"

--- a/dm/templates/target_proxy/tests/integration/target_proxy.yaml
+++ b/dm/templates/target_proxy/tests/integration/target_proxy.yaml
@@ -5,9 +5,10 @@ imports:
     name: target_proxy.py
 
 resources:
-  - name: ${HTTPS_RES_NAME}
+  - name: test-proxy
     type: target_proxy.py
     properties:
+      name:  ${HTTPS_RES_NAME}
       protocol: HTTPS
       target: $(ref.${URL_MAP_RES_NAME}.selfLink)
       quicOverride: ${HTTPS_QUIC_OVERRIDE}
