Fixes #140: DM/external_load_balancer: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/140
- Added version, links to docs
- Switched to using type provider
- Added support for cross-project resource creation
- Fixed resource names

--- a/dm/templates/external_load_balancer/examples/external_load_balancer_http.yaml
+++ b/dm/templates/external_load_balancer/examples/external_load_balancer_http.yaml
@@ -17,7 +17,7 @@ resources:
     properties:
       portRange: 80
       backendServices:
-        - name: default-backend-service
+        - resourceName: default-backend-service
           sessionAffinity: GENERATED_COOKIE
           affinityCookieTtlSec: 1000
           portName: http
