--- a/dm/templates/external_load_balancer/examples/external_load_balancer_ssl.yaml
+++ b/dm/templates/external_load_balancer/examples/external_load_balancer_ssl.yaml
@@ -18,7 +18,7 @@ resources:
     properties:
       portRange: 443
       backendServices:
-        - name: backend-service
+        - resourceName: backend-service
           portName: https
           healthCheck: <FIXME:healthcheck>
           backends:
