--- a/dm/templates/external_load_balancer/examples/external_load_balancer_tcp.yaml
+++ b/dm/templates/external_load_balancer/examples/external_load_balancer_tcp.yaml
@@ -20,7 +20,7 @@ resources:
     properties:
       portRange: 80
       backendServices:
-        - name: backend-service
+        - resourceName: backend-service
           portName: http
           healthCheck: <FIXME:healthcheck>
           backends:
